# Kainotes

./: Cargo.toml  DOCUMENTATION_BLOCKCHAIN_CORE_CHANGES.md  NETWORKING_INTEGRATION_FINAL_REPORT.md  README.md  docs.txt
crates/blockchain-core/: Cargo.toml
crates/blockchain-core/src/: block.rs  chain.rs  fork.rs  lib.rs  mempool.rs  metrics.rs  state.rs  transaction.rs  types.rs
crates/blockchain-crypto/: Cargo.toml
crates/blockchain-crypto/src/: hash.rs  keypair.rs  lib.rs  merkle.rs  signature.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  poas.rs  selection.rs  slashing.rs  validator.rs
crates/liquidity/: Cargo.toml
crates/liquidity/src/: amm.rs  deployment.rs  lending.rs  lib.rs  pool.rs  risk.rs  treasury.rs
crates/networking/: Cargo.toml  IMPLEMENTATION.md
crates/networking/src/: gossip.rs  lib.rs  p2p.rs  peer.rs  protocol.rs  sync.rs
crates/networking/tests/: integration_network.rs
crates/node/: Cargo.toml
crates/node/src/: config.rs  lib.rs  main.rs  runtime.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  methods.rs  server.rs  types.rs
crates/smart-contracts/: Cargo.toml
crates/smart-contracts/src/: gas.rs  lib.rs  precompiles.rs  state.rs  vm.rs
crates/storage/: Cargo.toml
crates/storage/src/: cache.rs  db.rs  lib.rs
crates/tokenomics/: Cargo.toml
crates/tokenomics/src/: burning.rs  lib.rs  minting.rs  phase_manager.rs  rewards.rs  utility_index.rs
crates/wallet/: Cargo.toml
crates/wallet-integration/: Cargo.toml
scripts/: generate_pdf.py
