[package]
name = "blockchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
blockchain-crypto = { path = "../blockchain-crypto" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = {workspace = true }

# Time
chrono = { workspace = true }

# Numeric types
num-bigint = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }