[package]
name = "smart-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
blockchain-crypto = { path = "../blockchain-crypto" }
blockchain-core = { path = "../blockchain-core" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# EVM
revm = { workspace = true }
ethers-core = { workspace = true }

# Numeric
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
hex = "0.4"